<resources>
    <string name="app_name">E-vahiny</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Paramètres</string>
    <string name="title_notifications">Notification</string>


    <!--    String dashboard-->
    <string name="dashboard_logo_name">Voyagez à Madagascar</string>
    <string name="dashboard_decouvrez">Decouvrez Madagascar avec ses activités</string>
    <string name="dashboard_decouvrez_desc">Decouvrez ces monuments,sites touristique,faune et flore</string>
    <string name="dashboard_views">Les plus populaires</string>
    <string name="search_text">Recherche...</string>
    <string name="view_all">Voir tout</string>
    <string name="categorie">Catégories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>